<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSplashText"
        tools:context="com.example.a1611821.doctor_appointment_booking.WelcomeActivity"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:gravity="center"
            android:paddingBottom="10dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="First Name"/>
            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/fullnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Surname"/>
            </android.support.v7.widget.CardView>

            <EditText
                android:padding="10dp"
                android:id="@+id/Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Email Address"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Identity or Passport Number"/>

            </android.support.v7.widget.CardView>

            <EditText
                android:padding="10dp"
                android:id="@+id/identity_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Gender"/>
            </android.support.v7.widget.CardView>

            <RadioGroup
                android:padding="10dp"
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:textColor="#000"
                    android:text="Male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <RadioButton
                    android:id="@+id/female"
                    android:textColor="#000"
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/colorBackground"
                android:elevation="4dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Cellphone Number"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/colorBackground"
                android:elevation="4dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Password"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Confirm Password"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <android.support.v7.widget.CardView
                android:elevation="8dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:onClick="doRegistration"
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="25dp"
                android:text="Create Account"
                android:clickable="true"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"></LinearLayout>

    </LinearLayout>
</ScrollView>