...
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card"
            android:padding="20dp"
            android:background="@color/colorSplashText"
            >

            <ImageView
                android:id="@+id/profile_image"
...
                android:text="Not Registred?"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/Registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:clickable="true"
                android:onClick="launchRegistration"
                android:padding="2dp"
                android:paddingLeft="3dp"
                android:text="Register"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/t2"
                app:layout_constraintTop_toBottomOf="@+id/login" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
...
